--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,51 @@
-# Virtual environment
-venv/
-.env/
-
-# Model files and caches
-*.pth
-*.bin
-*.h5
-model_checkpoints/
-offload/
+# Python
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Large data files
-*.wav
-*.mp3
-outputs/
+# Virtual Environment
+venv/
+env/
+ENV/
+.venv
 
-# IDE files
+# IDE
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
 
-# System files
+# Project specific
+outputs/
+*.mp3
+*.wav
+*.log
+.env
 .DS_Store
-Thumbs.db
+
+# Jupyter Notebook
+.ipynb_checkpoints
+*.ipynb_checkpoints
+
+# Model files (if large)
+models/
+*.bin
+*.safetensors
